EacRubyGemsUtils::Gem.rake.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,10 @@ AllCops:
 Layout/LineLength:
   Max: 100
 
+Rails/RakeEnvironment:
+  Exclude:
+    - spec/support/mygem/Rakefile
+
 Style/Documentation:
   Enabled: false
 
