--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,14 +3,38 @@ require:
   - rubocop-rspec
 
 AllCops:
-  TargetRubyVersion: 2.4
+  TargetRailsVersion: 5.2
+  TargetRubyVersion: 2.7
+
+Metrics/BlockLength:
+  Exclude:
+    - '**/*.gemspec'
+    - 'spec/**/*_spec.rb'
 
 Layout/LineLength:
   Max: 100
 
+Layout/MultilineMethodCallIndentation:
+  EnforcedStyle: indented_relative_to_receiver
+
+Rails/DynamicFindBy:
+  Enabled: false
+
 Rails/RakeEnvironment:
   Exclude:
     - spec/support/mygem/Rakefile
+
+Rails/Output:
+  Enabled: false
+
+Rails/SkipsModelValidations:
+  Enabled: false
+
+Rails/TimeZone:
+  Enabled: false
+
+Style/AsciiComments:
+  Enabled: false
 
 Style/Documentation:
   Enabled: false
